[package]
name = "liberty_tools_native"
version = "1.0.1-dev"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
# zlib-rs backend: pure-Rust, ~2-3x faster inflate than the default miniz_oxide,
# no C toolchain. Speeds the gzip decompress that dominates LibraryIndex.open.
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
pyo3 = { version = "0.27", features = ["extension-module"] }
quine-mc_cluskey = "0.2.4"
